k3s/api-deployment.yaml
#sus
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api 
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api
          image: ghcr.io/wanxsky/base-api:latest
          ports:
            - containerPort: 3000
