k3s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
spec:
    replicas: 1
    selector:
        matchLabels:
            app: db 
    template:
        metadata:
            labels:
                app: db
        spec:
            containers:
                - name: postgres
                  image: postgres:15-alpine
                  ports:
                    - containerPort: 5432
