k3s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: api-ingress 
spec:
  ingressClassName: nginx
  rules:
    - host: api.kzt.biz.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: api-service 
                port: 
                  number: 3000
