k3s/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: argocd-ingress 
  namespace: argocd 
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod 
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.kzt.biz.id
      secretName: argocd-tls 
  rules:
    - host: argocd.kzt.biz.id
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
